# self-taught-rust

./: CLAUDE.md  README.md  august.md  js-neon.md
day11_iterator_chains/src/: main.rs
day12_graceful_combinators/src/: main.rs
day2_os_threads_channels/: Cargo.toml
day3_recall/src/: main.rs
day4_mutexes_intro/src/: main.rs
day5_tokio_streams/src/: main.rs
day6_error_basics/: Cargo.toml
day6_error_basics/src/: main.rs
day7_recall/: Cargo.toml
day7_recall/src/: main.rs
day8_custom_error/: Cargo.toml
day8_custom_error/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
day9_thiserror_anyhow/: Cargo.toml
exams/: 00_intermediate_rust_readiness.md  01_diagnostic_exam.md  01_diagnostic_exam_v2.md  01_performance_measurement_bridge.md  02_unsafe_rust_bridge.md  03_mastery_exam.md  03_mastery_exam_v2.md  03_systems_programming_bridge.md  04_concurrency_bridge.md  04_production_exam.md  05_advanced_systems_diagnostic.md  05_systems_specialization_exam.md  05_systems_specialization_v2.md  06_unsafe_rust_mastery.md  07_low_level_systems_mastery.md  08_lock_free_concurrency_mastery.md  09_integration_exam.md  START_HERE.md  exam1.md  midterm.md  midterm_new.md
exams/masterclasses/: axum_primer.md  capstone.md  k3s_production_primer.md  sqlx_primer.md  (+1 more)
homework/day13_lifetimes_grok/: Cargo.toml  lifetimes.md
homework/day15_performance_toolkit/: Cargo.toml  README.md
homework/day15_performance_toolkit/benches/: json_benchmark.rs  string_benchmark.rs
homework/day15_performance_toolkit/src/: async_deadlock.rs  cpu_intensive.rs  memory_issues.rs  mystery_crash.rs
school/: 0_course.md  1_course.md  1_introduction.md  1_performance_debugging.md  2_midterm.md  3_capstone.md  k8s_operator_tutorial.md  k8s_tutorial.md
ultra_think_exercises/: Cargo.toml  day01_ownership_basics.rs  day25_async_basics.rs
(+17 files in other folders)
