[package]
name = "day13_lifetimes_grok"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
